@@ -31,3 +31,18 @@ SELECT 'ST_MinkowskiSum', ST_AsText(ST_MinkowskiSum('LINESTRING(0 0,4 0)','POLYG
 SELECT 'ST_StraightSkeleton', ST_AsText(ST_StraightSkeleton('POLYGON((1 1,2 1,2 2,1 2,1 1))'));
 SELECT 'ST_ConstrainedDelaunayTriangles', ST_AsText(ST_ConstrainedDelaunayTriangles('GEOMETRYCOLLECTION(POINT(0 0), POLYGON((2 2, 2 -2, 4 0, 2 2)))'));
 SELECT 'postgis_sfcgal_noop', ST_NPoints(postgis_sfcgal_noop(ST_Buffer('POINT(0 0)', 5)));
+-- Test https://trac.osgeo.org/postgis/ticket/5818
+  WITH solid AS (
+      SELECT ST_MakeSolid(
+          'POLYHEDRALSURFACE Z (((-1 1 -1,1 1 -1,1 -1 -1,-1 -1 -1,-1 1 -1)),
+                                ((-1 1 1,-1 -1 1,1 -1 1,1 1 1,-1 1 1)),
+                                ((-1 1 -1,-1 1 1,1 1 1,1 1 -1,-1 1 -1)),
+                                ((1 1 -1,1 1 1,1 -1 1,1 -1 -1,1 1 -1)),
+                                ((1 -1 -1,1 -1 1,-1 -1 1,-1 -1 -1,1 -1 -1)),
+                                ((-1 -1 -1,-1 -1 1,-1 1 1,-1 1 -1,-1 -1 -1)))'
+      ) geom
+  )
+  SELECT
+      'ST_IsSolid',
+      ST_IsSolid(geom)
+  FROM solid;
